# SFX

./: DocumentacaoUnificada.md  README.md  docker-compose.yaml  pyproject.toml
backend/: a.py  pyproject.toml
backend/src/: backend.py  frontend.py
frontend/src/: App.svelte
src/: backend.py  frontend.py
